WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34292
V8 implementation of MessageEvent.initMessageEvent() does not set source correctly
https://bugs.webkit.org/show_bug.cgi?id=34292
Summary
V8 implementation of MessageEvent.initMessageEvent() does not set source corr...
Andrew Wilson
Reported
2010-01-28 16:50:02 PST
The code to set the source attribute in MessageEvent.initMessageEvent() in the v8 bindings is broken, because it assumes that the passed-in parameter is a wrapped DOMWindow object, when instead it's an object that inherits from DOMWindow via the prototype chain. This causes fast/events/init-events.html to fail downstream in Chrome.
Attachments
Patch
(1.86 KB, patch)
2010-01-28 18:18 PST
,
Andrew Wilson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrew Wilson
Comment 1
2010-01-28 18:18:17 PST
Created
attachment 47663
[details]
Patch
Adam Barth
Comment 2
2010-01-28 22:01:11 PST
Comment on
attachment 47663
[details]
Patch Nice! That came out very pretty.
WebKit Commit Bot
Comment 3
2010-01-29 10:13:16 PST
Comment on
attachment 47663
[details]
Patch Clearing flags on attachment: 47663 Committed
r54070
: <
http://trac.webkit.org/changeset/54070
>
WebKit Commit Bot
Comment 4
2010-01-29 10:13:21 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug