2010-01-29  Drew Wilson  <atwilson@chromium.org>

Reviewed by Adam Barth.

        V8 implementation of MessageEvent.initMessageEvent() does not set source correctly.
        https://bugs.webkit.org/show_bug.cgi?id=34292

        Test: fast/events/init-events.html will pass in Chrome now.

        * bindings/v8/custom/V8MessageEventCustom.cpp:
        (WebCore::V8MessageEvent::initMessageEventCallback):
        Now properly extracts the reference to the DOMWindow object from the passed-in window parameter.

Canonical link: https://commits.webkit.org/45437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54070 268f45cc-cd09-0410-ab3c-d52691b4dbfc